<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codetest.RouteDetailActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/routeNameTextView"
        android:layout_gravity="center_horizontal"
        android:textSize="22dp"
        android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streets_label"
            android:id="@+id/streetsTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/streetsListView"
            android:layout_gravity="center_horizontal"
            />


    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="200dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timetable_label"
            android:id="@+id/timetableTextView"
            android:layout_gravity="center_horizontal"
            android:textSize="18dp"
            android:textStyle="bold"/>

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/departuresListView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back_button_label"
         android:id="@+id/backButton"
         android:layout_gravity="center_horizontal"
         android:onClick="back"/>

</LinearLayout>