<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codetest.MainActivity"
    android:orientation="vertical">

<!--     <TextView -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="@string/hello_world" /> -->

	<LinearLayout android:orientation="vertical"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">

   	<EditText
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:id="@+id/searchEditText"
	      android:inputType="text"
	      android:hint="@string/search_street_hint"
           />
	    
		<LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center">
		
		    <Button
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/searchButton"
		        android:text="@string/search_button_label"
		        android:onClick="searchRoute"	        
		        />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maps_button_label"
                android:id="@+id/map" />
		</LinearLayout>
  </LinearLayout>  
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/routesListView"
        android:layout_gravity="center_horizontal" />
<!--     <Button -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:text="Stop Services" -->
<!--         android:id="@+id/button" -->
<!--         android:onClick="stopService" -->
<!--         android:layout_below="@+id/button2" -->
<!--         android:layout_alignLeft="@+id/button2" -->
<!--         android:layout_alignStart="@+id/button2" -->
<!--         android:layout_alignRight="@+id/button2" -->
<!--         android:layout_alignEnd="@+id/button2" /> -->

</LinearLayout >
